# Coding_Problems_Challenges

./: .gitignore  README.md
BF/: HelloWorld.bf  Multiply.bf  Plusing.bf
C++/C++_KatasAndTests/: CMakeLists.txt  CodeWars.cpp  CodeWars.h
C++/C++_KatasAndTests/tests/: CMakeLists.txt  CodeWarsTests.cpp
Elixir/: Hello_World.ex
Haskell/: AdjacentRepeatedWords.hs  AlphabetWar.hs  AlternateCase.hs  BasicMathOperations.hs  BlackjackScorer.hs  Convert_Number_to_String.hs  Convert_String_to_Number.hs  CountTheDigit.hs  CountingSheep.hs  EvenOrOdd.hs  ExesAndOhs.hs  FindTheUniqueNumber.hs  FlushValidator.hs  FriendOrFoe.hs  Grasshopper_Summation.hs  HashtagGenerator.hs  HighestRankNumberInArray.hs  HowGoodAreYouReally.hs  IndexedCapitalization.hs  InsideOutStrings.hs  IntegerDepth.hs  JadenCasingStrings.hs  LotteryTicket.hs  MasterOfFiles.hs  MaximumLengthDifference.hs  MaximumSumValueOfRanges.hs  Mixbonacci.hs  NoZerosForHeroes.hs  NumericalPalidrome4.hs  NumericalPalindrome2.hs  OddOrEvenSum.hs  OnesAndZeroes.hs  PowerOfTwo.hs  PrimeProduct.hs  PrinterErrors.hs  ReachMeAndSumMyDigits.hs  RemoveFirstLastCharacters.hs  ShortestWord.hs  SimpleStringCharacters.hs  SquareEveryDigit.hs  (+9 more)
JavaScript/: AdvancedPigLatin.js  All_Balanced_Parenthesis.js  ArrayElementParity.js  CalculatingWithFunctions.js  CamelCase.js  Convert_String_to_CamelCare.js  Counting_Duplicates.js  Decode_Morse_Code.js  Delete_Occurrences_After_N_Array.js  Detect_Pangram.js  DrivingSchool1.js  Dubstep.js  Duplicate_Encoder.js  ExclamationMarks2.js  ExclamationMarks4.js  Find_the_Parity_Outlier.js  FixStringCase.js  FunctionalSQL.js  Highest_Scoring_Word.js  IP_Validation.js  IQ_Test.js  Irreducible_Sum_of_Rationals.js  Isograms.js  Meeting.js  Moving_Zeroes_to_End.js  Playing_with_Digits.js  PowersOf2.js  PrimeStreamingPG13.js  Recursion101.js  Regex_Password_Validation.js  RemoveDuplicates.js  Replace_with_Alphabet_Position.js  ReverseOrder.js  ReverseWordsInString.js  Reverse_Words_In_Array.js  SQLEngine.js  Simple_PigLatin.js  Sort_the_Odd.js  Split_Strings.js  StringReversal.js  (+9 more)
NASM/: AbbreviateName.asm  BinaryToDeciminal.asm  BoolToString.asm  Capitalize.asm  CaseCheck.asm  CenturyFromYear.asm  CharacterRecognitionSoftwareCorrections.asm  ConvertBooleanToYesNo.asm  DoubleInteger.asm  FactorCheck.asm  FakeBinary.asm  Final_Grades.asm  Find_Smallest_Integer.asm  Floor.asm  GrasshopperGoals.asm  HasDigits.asm  If.asm  Multiply.asm  Multiplying2Numbers.asm  NthEvenNumber.asm  NumberToWord0-9.asm  OddUpToN.asm  SimpMultiplication.asm  SquaringArgument.asm  SummingArray.asm  Tail.asm  Vowels.asm  XOR.asm  clock.asm  hello_world.asm
Python/: Break_camelCase.py  Dashatize_It.py  Data_Reverse.py  Directions_Reduction.py  English_Beggars.py  FIFO_OS_Scheduling.py  Find_the_Unique_Number.py  If_you_can_read_this.py  Number_of_Trailing_Zeroes_N.py  ParseHTML_CSS_Colors.py  Persistent_Bugger.py  Pete_the_Baker.py  Playing_with_Digits.py  Plus1_Array.py  Reverse_Every_Other_Word_in_String.py  Rot13.py  Snail.py  Special_Format_Names_List_Dict.py  Square(n)_Sum.py  String_Ends_With?.py  Triple_Trouble.py  Unique_in_Order.py  Where_my_Anagrams_at.py  Your_order_please.py
Ruby/: Are_they_the_same.rb  Array_diff.rb  Build_Tower.rb  Convert_String_to_Camel_Case.rb  Count_the_Smiley_Faces.rb  Create_Phone_Number.rb  Descending_Order.rb  Detect_Pangram.rb  Does_my_Number_look_big.rb  Encrypt_This.rb  Equal_Sides_of_an_Array.rb  Eureka_Numbers.rb  Extract_Domain_from_URL.rb  Find the Parity Outlier.rb  Find_the_Missing_Letter.rb  Find_the_Odd_Int.rb  Greed_is_Good.rb  Highest_and_Lowest.rb  Mutliples_of_3_or_5.rb  Pick_Peaks.rb  Product_of_Consec_Fib_Numbers.rb  RGB_to_Hex_Conversion.rb  Reverse_Words.rb  Rot13.rb  Scrambies.rb  Snail.rb  String_Incremenator.rb  Valid_Braces.rb  Who_LIkes_It?.rb  Write_Number_in_Expanded_Form.rb  (+1 more)
(+292 files in other folders)
